[package]
name = "boatramp-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared, wasm-clean wire types + routing/config logic for boatramp (used by the server, CLI, and the edge Worker so the wire format and routing can't drift)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
regex.workspace = true
lru.workspace = true
ron.workspace = true
hex.workspace = true
ipnet.workspace = true
argon2.workspace = true
getrandom.workspace = true
# For `domain_verify`'s injected `DomainProbe` async trait (pure, wasm-clean).
async-trait.workspace = true

# On `wasm32-unknown-unknown` (the edge Worker target), `getrandom` needs its
# `js` backend to compile (argon2 salt + token-style randomness). Native and
# wasm32-wasi are unaffected.
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { workspace = true, features = ["js"] }

[dev-dependencies]
# `domain_verify`'s tests use `#[tokio::test]`.
tokio = { workspace = true }

[lints]
workspace = true
