[package]
name = "boatramp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "boatramp — self-hosted, streaming-first static site publishing (server + CLI in one binary)"
default-run = "boatramp"

[[bin]]
name = "boatramp"
path = "src/main.rs"

[features]
default = ["fs", "slatedb"]
fs = ["boatramp-storage/fs"]
s3 = ["boatramp-storage/s3"]
cloudflare-kv = ["boatramp-storage/cloudflare-kv"]
# Durable embedded KV (the default `--kv slatedb`): transactional LSM over an
# object_store backend.
slatedb = ["boatramp-storage/slatedb"]
# HTTPS: `--tls custom` (operator cert) and `--tls acme` (automatic certs).
tls = ["dep:axum-server", "dep:rustls-acme", "dep:rustls", "dep:rustls-pemfile"]
# OIDC bearer-JWT control-plane auth: verify `serve` against an
# OIDC issuer's JWKS. Enables the server's `oidc` feature.
oidc = ["boatramp-server/oidc"]
# External token signer backends: mint control-plane tokens
# with a KMS/HSM/Vault-held root key (`[serve.signer]`). Each forwards to the
# server's backend feature; off by default (the in-process key needs none).
signer-vault = ["boatramp-server/signer-vault"]
signer-gcp = ["boatramp-server/signer-gcp"]
signer-azure = ["boatramp-server/signer-azure"]
signer-aws = ["boatramp-server/signer-aws"]
signer-pkcs11 = ["boatramp-server/signer-pkcs11"]
# On-the-fly response compression, runtime-opt-in per site.
compression = ["boatramp-server/compression"]
# HTTP/3 (QUIC) serving: a UDP listener alongside the TLS
# TCP one (`--tls custom --http3`). Requires `tls` (QUIC needs the rustls config).
http3 = ["tls", "boatramp-server/http3"]
# Wildcard TLS via ACME DNS-01 + a pluggable DNS-provider layer (the `dns`
# subcommand + `--tls acme-dns`): issues `*._deploy.<host>` certs the wildcard
# preview host needs (TLS-ALPN-01 can't). Pulls instant-acme + the provider
# clients; off by default.
acme-dns = [
  "tls",
  "dep:boatramp-acme",
  "boatramp-acme/acme",
  "boatramp-acme/cloudflare",
  "boatramp-acme/route53",
  "boatramp-acme/oci",
  "boatramp-acme/digitalocean",
  "boatramp-acme/hetzner",
  "boatramp-acme/ns1",
  "boatramp-acme/dnsimple",
  "boatramp-acme/gcp-dns",
  "boatramp-acme/azure-dns",
  "boatramp-acme/akamai",
]
# Embedded, in-process Rust bundler for the `bundle` subcommand: Rolldown for
# JS/TS (tree-shake + minify) and lightningcss for CSS (`@import` inline +
# minify). Off by default — keeps the default build lean.
bundler = ["dep:rolldown", "dep:lightningcss"]
# WebAssembly handler support: at `sync`, validate component blobs (parseable
# component, required export, declared-imports policy) via wit-component. Off by
# default; the engine (wasmtime) lands behind this flag later. `dummy-module`
# is pulled so tests can synthesize fixture components without a guest toolchain.
handlers = [
  "dep:wit-component",
  "dep:wit-parser",
  "dep:boatramp-handlers",
  "boatramp-handlers/engine",
  "boatramp-server/handlers",
  # The SQL backend for the handler `sql` binding: libsql — an embedded file per
  # site (single-node) or a namespace per site on a shared sqld (cluster). The
  # single-node/cluster split is config (`[handlers.bindings.sql]`), not a
  # backend choice.
  "boatramp-storage/sql",
]
# Self-hosted **cluster mode** (`boatramp serve --mode cluster`): embedded Raft
# over the HTTP peer mesh, durable per-node Raft stores, and the RaftKv /
# RaftMessaging serving facades. Pulls boatramp-cluster +
# axum; off by default so the single-node binary stays lean. Implies `handlers`
# (cluster mode exists to run handlers across nodes) and `slatedb` (the durable
# node-local Raft store).
cluster = [
  "handlers",
  "slatedb",
  "dep:boatramp-cluster",
  "boatramp-cluster/http",
  "dep:axum",
  # The peer mesh is served over mutual TLS, independent of `--tls`.
  "dep:axum-server",
  # The `MeshAdmitter` impl bridging the join route to `ClusterNode::admit`.
  "dep:async-trait",
]

[dependencies]
# COSE/CWT + Cedar auth is always built into the binary: the CLI
# mints/manages tokens and serve wires the verifier.
boatramp-core = { workspace = true, features = ["authz"] }
boatramp-storage.workspace = true
boatramp-server.workspace = true
# The OCI→ext4 rootfs build for `boatramp compute build` +
# the in-process embedded-VMM `ComputeBackend`. `embedded` only pulls its
# Linux/KVM deps on Linux (the backend module is `target_os = "linux"`-gated), so
# enabling it cross-platform is a no-op off Linux.
boatramp-firecracker = { workspace = true, features = [
  "build",
  "backend",
  "embedded",
] }
# The native container backend: the `__sandbox` re-exec worker (Linux) runs its
# self-jail; the pure layer compiles everywhere.
boatramp-container.workspace = true
# The remote-docker compute backend (cross-platform Engine API client).
boatramp-docker.workspace = true
boatramp-handlers = { workspace = true, optional = true }
boatramp-acme = { workspace = true, optional = true }
boatramp-cluster = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
tokio = { workspace = true }
tokio-util.workspace = true
futures.workspace = true
clap.workspace = true
# `completions` / `man` subcommands — the shell-completion + man-page payload that
# the distro/Homebrew/Nix packages install.
clap_complete.workspace = true
clap_mangen.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
ron.workspace = true
reqwest.workspace = true
walkdir.workspace = true
sha2.workspace = true
hex.workspace = true
brotli.workspace = true
flate2.workspace = true

axum-server = { workspace = true, optional = true }
rustls-acme = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
rolldown = { workspace = true, optional = true }
lightningcss = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
wit-component = { workspace = true, optional = true, features = [
  "dummy-module",
] }
wit-parser = { workspace = true, optional = true }

[dev-dependencies]
# Generate a self-signed cert/key in the cluster-TLS bridge tests (avoids
# embedding a base64 fixture). Already in the tree via boatramp-acme `acme`.
rcgen = "0.13"

# ---------------------------------------------------------------------------
# OS-native package metadata. Version / license / description /
# maintainer are single-sourced from `[package]` (which reads `[workspace.package]`)
# — packagers read them, never restate them. Asset source paths are relative to
# THIS crate dir for cargo-deb (`../../…` reaches the workspace root), and relative
# to the workspace root (the invocation dir) for cargo-generate-rpm. The systemd
# unit + sysusers/tmpfiles payload lives in `packaging/`. Real validation is CI:
# `dpkg -i` on Debian/Ubuntu + `lintian`, `rpm -i` on Fedora/RHEL + `rpmlint`.
# Completions + man page are generated by the release job (`boatramp completions`/
# `boatramp man`) and folded in there — omitted from the static asset lists so a
# plain `cargo deb`/`cargo generate-rpm` from a fresh checkout still works.

[package.metadata.deb]
maintainer = "Giacomo Cariello <info@giacomocariello.com>"
copyright = "2026, Giacomo Cariello <info@giacomocariello.com>"
license-file = ["../../LICENSE-MIT", "0"]
extended-description = """\
boatramp is a self-hosted, streaming-first alternative to Vercel: one binary that \
publishes and serves static sites with atomic deploys, runs WebAssembly edge \
handlers, terminates TLS, and forms a self-hosted cluster. The Linux-only compute \
backends (microVM/container) require a relaxed systemd sandbox — see the drop-in \
note in the shipped unit."""
section = "web"
priority = "optional"
depends = "$auto"
assets = [
  [
    "target/release/boatramp",
    "usr/bin/",
    "755",
  ],
  [
    "../../packaging/systemd/boatramp.service",
    "lib/systemd/system/boatramp.service",
    "644",
  ],
  [
    "../../packaging/systemd/boatramp.sysusers",
    "usr/lib/sysusers.d/boatramp.conf",
    "644",
  ],
  [
    "../../packaging/systemd/boatramp.tmpfiles",
    "usr/lib/tmpfiles.d/boatramp.conf",
    "644",
  ],
  [
    "../../boatramp.cfg.example",
    "etc/boatramp/boatramp.cfg",
    "644",
  ],
  [
    "../../README.md",
    "usr/share/doc/boatramp/README.md",
    "644",
  ],
  [
    "../../LICENSE-MIT",
    "usr/share/doc/boatramp/LICENSE-MIT",
    "644",
  ],
  [
    "../../LICENSE-APACHE",
    "usr/share/doc/boatramp/LICENSE-APACHE",
    "644",
  ],
]
conf-files = ["/etc/boatramp/boatramp.cfg"]
maintainer-scripts = "../../packaging/deb/"

[package.metadata.generate-rpm]
summary = "Self-hosted, streaming-first static site publishing + edge compute"
assets = [
  { source = "target/release/boatramp", dest = "/usr/bin/boatramp", mode = "0755" },
  { source = "packaging/systemd/boatramp.service", dest = "/usr/lib/systemd/system/boatramp.service", mode = "0644" },
  { source = "packaging/systemd/boatramp.sysusers", dest = "/usr/lib/sysusers.d/boatramp.conf", mode = "0644" },
  { source = "packaging/systemd/boatramp.tmpfiles", dest = "/usr/lib/tmpfiles.d/boatramp.conf", mode = "0644" },
  { source = "boatramp.cfg.example", dest = "/etc/boatramp/boatramp.cfg", mode = "0644", config = true },
  { source = "LICENSE-MIT", dest = "/usr/share/licenses/boatramp/LICENSE-MIT", mode = "0644", doc = true },
  { source = "LICENSE-APACHE", dest = "/usr/share/licenses/boatramp/LICENSE-APACHE", mode = "0644", doc = true },
  { source = "README.md", dest = "/usr/share/doc/boatramp/README.md", mode = "0644", doc = true },
]
post_install_script = """
systemd-sysusers /usr/lib/sysusers.d/boatramp.conf >/dev/null 2>&1 || :
systemd-tmpfiles --create /usr/lib/tmpfiles.d/boatramp.conf >/dev/null 2>&1 || :
systemctl daemon-reload >/dev/null 2>&1 || :
"""
pre_uninstall_script = """
if [ "$1" = "0" ]; then
    systemctl --quiet stop boatramp.service >/dev/null 2>&1 || :
    systemctl --quiet disable boatramp.service >/dev/null 2>&1 || :
fi
"""
post_uninstall_script = """
systemctl daemon-reload >/dev/null 2>&1 || :
"""
