# Example WebAssembly handler guest: a wasi:http handler that
# also imports wasi:keyvalue, exercising the engine's keyvalue host binding
# end-to-end. Built to a component with
# `cargo build --release --target wasm32-wasip2`; consumed as a fixture by the
# `boatramp-handlers` engine tests. Excluded from the workspace (targets wasm).
[package]
name = "boatramp-example-kv-counter"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.46"

[profile.release]
opt-level = "s"
strip = true
